tests/baselines/reference/unterminatedStringLiteralWithBackslash1.errors.txt
==== tests/cases/compiler/unterminatedStringLiteralWithBackslash1.ts (1 errors) ====
    "\
      
!!! unterminatedStringLiteralWithBackslash1.ts(1,3): error TS1002: Missing close quote character.